--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="first">
+            <div class="hat">
+                <ul>
+                    <li><a href="#">Works</a></li>
+                    <li><a href="#"></a>Blog</li>
+                    <li><a href="#"></a>Contact</li>
+                </ul>
+            </div>
+
+    </div>
 </body>
 </html>
