--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <!-- Шапка -->
     <div class="first">
             <div class="hat">
                 <ul>
                     <li><a href="#">Works</a></li>
-                    <li><a href="#"></a>Blog</li>
-                    <li><a href="#"></a>Contact</li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-
     </div>
+    <!-- Конец шапке -->
 </body>
 </html>
