--- a/index.html
+++ b/index.html
@@ -19,5 +19,25 @@
             </div>
     </div>
     <!-- Конец шапке -->
+    <div class="author">
+        <div class="wrapper">
+            <div class="author_info">
+                <div class="author_titel">
+                    Hi, I am John,
+                    Creative&nbsp;Technologist
+                </div>
+                <div class="author_text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </div>
+                <div class="buttom">
+                    Download Resume
+                </div>
+            </div>
+            <div class="author_avatar">
+                <img src="/img/avatar.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- конец шапке -->
 </body>
 </html>
