--- a/index.html
+++ b/index.html
@@ -39,5 +39,36 @@
         </div>
     </div>
     <!-- конец шапке -->
+    <!-- Posty -->
+    <div class="posts">
+        <div class="wrapper">
+            <div class="posts_header">
+                <div class="posts_title">Recent posts</div>
+                <a href="#">View all</a>
+            </div>
+            <div class="posts_cards">
+                <div class="posts_card">
+                    <div class="posts_card-title">Making a design system from scratch</div>
+                    <div class="posts_card-info">
+                        <div class="posts_date">12 Feb 2020</div>
+                        <div class="postes_tags">Design, Pattern</div>
+                    </div>
+                <div class="postes_card-text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </div>
+            </div>
+            <div class="posts_card">
+                <div class="posts_card-title">Creating pixel perfect icons in Figma</div>
+                <div class="posts_card-info">
+                    <div class="posts_date">12 Feb 2020</div>
+                    <div class="postes_tags">Figma, Icon Design</div>
+                </div>
+            <div class="postes_card-text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </div>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
