--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
             </div>
         </div>
     </div>
-
 </div>
+<!-- Blok3 -->
+<div class="works"> 
+    <div class="dashboard">
+        <div class="dash_img"></div>
+        <div class="dash_info"></div>
+    </div>
+    <div class="dashboard">
+        <div class="dash_img"></div>
+        <div class="dash_info"></div>
+    </div>
+    <div class="dashboard">
+        <div class="dash_img"></div>
+        <div class="dash_info"></div>
+    </div>
+</div>
+
 </body>
 </html>
