--- a/index.html
+++ b/index.html
@@ -51,37 +51,43 @@
                     <div class="posts_card-title">Making a design system from scratch</div>
                     <div class="posts_card-info">
                         <div class="posts_date">12 Feb 2020</div>
-                        <div class="postes_tags">Design, Pattern</div>
+                        <div class="posts_tags">Design, Pattern</div>
+                        <div class="clearfix"></div>
                     </div>
-                <div class="postes_card-text">
+                    <div class="posts_card-text">
                     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </div>
                 </div>
-            </div>
-            <div class="posts_card">
-                <div class="posts_card-title">Creating pixel perfect icons in Figma</div>
-                <div class="posts_card-info">
-                    <div class="posts_date">12 Feb 2020</div>
-                    <div class="postes_tags">Figma, Icon Design</div>
+                <div class="posts_card">
+                    <div class="posts_card-title">Creating pixel perfect icons in Figma</div>
+                    <div class="posts_card-info">
+                        <div class="posts_date">12 Feb 2020</div>
+                        <div class="posts_tags">Figma, Icon Design</div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="posts_card-text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </div>
                 </div>
-            <div class="postes_card-text">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </div>
         </div>
     </div>
-</div>
+
 <!-- Blok3 -->
 <div class="works"> 
-    <div class="dashboard">
-        <div class="dash_img"></div>
-        <div class="dash_info"></div>
-    </div>
-    <div class="dashboard">
-        <div class="dash_img"></div>
-        <div class="dash_info"></div>
-    </div>
-    <div class="dashboard">
-        <div class="dash_img"></div>
-        <div class="dash_info"></div>
+    <div class="wrapper">
+        <div class="dashboard">
+            <div class="dash_img"></div>
+            <div class="dash_info"></div>
+        </div>
+        <div class="dashboard">
+            <div class="dash_img"></div>
+            <div class="dash_info"></div>
+        </div>
+        <div class="dashboard">
+            <div class="dash_img"></div>
+            <div class="dash_info"></div>
+        </div>
     </div>
 </div>
 
